Changelog for ATReferenceBrowserWidget

    (name of developer listed in brackets)

ATReferenceBrowserWidget 2.0.2 - Unreleased

    - Inserted references were not checked by default on Internet Explorer 7.
      This closes http://dev.plone.org/plone/ticket/7936.
      [hannosch]

ATReferenceBrowserWidget 2.0.1 - Released September 10, 2007

    - Added a reference_edit macro to the referencebrowser.pt template and
      call it from the edit macro. This makes it reusable by other widgets.
      [deo]

ATReferenceBrowserWidget 2.0 - Released August 9, 2007

    - No changes.
      [hannosch]

ATReferenceBrowserWidget 2.0rc1 - Released July 9, 2007

    - Changed an invalid div tag inside a ul to a li tag in referencebrowser.pt.
      [hannosch]

    - Small i18n markup correction.
      [hannosch]

ATReferenceBrowserWidget 2.0b4 - Released May 5, 2007

    - Removed five:registerPackage as it is causing problems in ZEO
      environments.
      [hannosch]

ATReferenceBrowserWidget 2.0b3 - Released May 1, 2007

    - Death to tabindexes!
      [limi]

    - Use getToolByName to get the portal_properties tool
      [wichert]

    - ATReferenceBrowserWidget now uses checkboxes for displaying the selection
      (instead of a selection field).
      [jvloothuis]

    - Removed unused and wrong types_param definition throwing errors in some
      configurations. (There is no mandatory "allowed_types" attribute on field
      definitions you can rely on.) If this line was good for anything, please
      re-add it in a failsafe version.
      [deichi]

ATReferenceBrowserWidget 2.0b2 - Released March 23, 2007

    - Replaced all getToolByName calls with getUtility.
      [hannosch]

ATReferenceBrowserWidget 2.0b1 - Released March 5, 2007

    - Converted to a regular Python package in the Products namespace.
      [hannosch]

    - Removed lots of BBB code. We require Archetypes 1.5 now.
      [hannosch]
