@@ -4,6 +4,11 @@ Changelog for ATReferenceBrowserWidget
 
 ATReferenceBrowserWidget 2.0.2 - Unreleased
 
+    - Added new property 'startup_directory_method'. It defines a
+      method that, if available at the instance, will be used to obtain the
+      path of the startup directory.
+      [rsantos]
+
     - Inserted references were not checked by default on Internet Explorer 7.
       This closes http://dev.plone.org/plone/ticket/7936.
       [hannosch]
